# geonames

./: .gitattributes  .gitignore  COPYING.data  Makefile.am  autogen.sh  configure.ac
data/: Makefile.am  admin1Codes.txt  alternateNames.txt
debian/: changelog  control  copyright  libgeonames-dev.install  libgeonames0.install  rules
demo/: Makefile.am  geonames-demo.c
doc/reference/: Makefile.am  geonames-docs.xml.in
src/: Makefile.am  geonames-mkdb.c  geonames-query.c  geonames-query.h  geonames.c  geonames.gresources.xml  geonames.h  geonames.pc.in
tests/: Makefile.am  test-geonames.c
